Add CI workflow to check for commonly misspelled words
On every push, pull request, and periodically, use the codespell-project/actions-codespell action to check for commonly
misspelled words.

In the event of a false positive, the problematic word should be added, in all lowercase, to the ignore-words-list field
of ./.codespellrc. Regardless of the case of the word in the false positive, it must be in all lowercase in the ignore
list. The ignore list is comma-separated with no spaces.

--- a/README.adoc
+++ b/README.adoc
@@ -1,9 +1,14 @@
-= Audio Library for Arduino =
+:repository-owner: arduino-libraries
+:repository-name: Audio
+
+= {repository-name} Library for Arduino =
+
+image:https://github.com/{repository-owner}/{repository-name}/actions/workflows/spell-check.yml/badge.svg["Spell Check status", link="https://github.com/{repository-owner}/{repository-name}/actions/workflows/spell-check.yml"]
 
 The Audio library enables an Arduino Due board to play back .wav files from a storage device like an SD card.
 
 For more information about this library please visit us at
-http://www.arduino.cc/en/Reference/Audio
+http://www.arduino.cc/en/Reference/{repository-name}
 
 == License ==
 
